# cmcs

./: README.md  continuous.ipynb  discrete.ipynb  euler.py  pyproject.toml  reactions.py  requirements.txt
PRISM_models/: 06_sir_vaccine.csl
cmcs/: chemical.py  euler.py  gillespie.py  markov_chain.py  money_agent.py  ode.py  recurrence.py
datasets/: letter1.txt
notebooks/: adults_children.ipynb  continuous.ipynb  discrete.ipynb  epidemic.ipynb  prey_predators.ipynb
simulate/: discrete.py  euler.py
