[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcs" # nome del pacchetto
version = "0.1.0"
description = "Simulation routines for complex systems"
authors = [{ name = "Federico", email = "kiko.bustaffa@gmail.com" }]

dependencies = ["numpy", "scipy", "matplotlib", "pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cmcs"]
